<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#413E4F">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout"
        android:gravity="center"
        android:paddingTop="50dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My"
        android:textSize="20dp"
        android:textColor="@color/white">
    </TextView>
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registration"
             android:textSize="25dp"
             android:layout_marginLeft="5dp"
            android:textColor="#4ADFC7">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/first_name"
            android:padding="10dp"
            android:background="@drawable/buttomline_edittextview"
            android:textColorHint="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:hint="@string/email_id"
            android:padding="10dp"
            android:background="@drawable/buttomline_edittextview"
            android:textColorHint="@color/white"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:hint="@string/password"
            android:padding="10dp"
            android:background="@drawable/buttomline_edittextview"
            android:textColorHint="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:hint="@string/confrim_password"
            android:padding="10dp"
            android:background="@drawable/buttomline_edittextview"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:background="#51D8C7">

        </Button>

    </LinearLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="20dp"
    app:layout_constraintBottom_toBottomOf="parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp"
        tools:ignore="MissingConstraints" />
</RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>